--- a/Create Solution/media.css
+++ b/Create Solution/media.css
@@ -13,11 +13,11 @@
     nav ul {
         flex-direction: row;
         align-items: center;
-        padding: 10px 0;
+        padding: 5px 0;
     }
 
     nav ul li {
-        margin: 10px 0;
+        margin: 5px 0;
     }
 
     .call {
@@ -83,7 +83,7 @@
     }
 
     .cmg {
-        margin-right: 0;
+        margin-left:0;
         width: 80%;
     }
 
