--- a/Create Solution/media.css
+++ b/Create Solution/media.css
@@ -17,7 +17,7 @@
     }
 
     nav ul li {
-        margin: 5px 0;
+        margin: 0;
     }
 
     .call {
@@ -83,7 +83,7 @@
     }
 
     .cmg {
-        margin-left:0;
+        margin-left:3px;
         width: 80%;
     }
 
