--- a/Create Solution/media.css
+++ b/Create Solution/media.css
@@ -16,8 +16,9 @@
         padding: 0;
     }
 
-    nav ul li {
+    nav ul li a{
         margin: 0;
+        font-size: 5px;
     }
 
     .call {
