--- a/Create Solution/media.css
+++ b/Create Solution/media.css
@@ -17,8 +17,8 @@
     }
 
     nav ul li a{
-        margin: 0;
-        font-size: 10px;
+        margin: 2px;
+        font-size: 15px;
     }
 
     .call {
