--- a/Create Solution/media.css
+++ b/Create Solution/media.css
@@ -17,7 +17,7 @@
     }
 
     nav ul li a{
-        margin-lefft: 5px;
+        margin-left: 5px;
         margin: 8px;
         font-size: 15px;
     }
