--- a/Create Solution/media.css
+++ b/Create Solution/media.css
@@ -51,7 +51,8 @@
     }
 
     .right-section img {
-        max-width: 100%;
+        margin-top: 20px;
+        max-width: 90px;
     }
 
     .service-cards {
