--- a/Create Solution/media.css
+++ b/Create Solution/media.css
@@ -172,3 +172,32 @@
         text-align: center;
     } */
 }
+
+@media screen and (max-width: 1024px) { /* Tablets */
+    .cta {
+        width: 90%;
+        height: 70px;
+        font-size: 18px;
+        flex-wrap: wrap;
+        text-align: center;
+        padding: 10px;
+    }
+}
+
+@media screen and (max-width: 768px) { /* Mobile devices */
+    .cta {
+        width: 95%;
+        height: auto;
+        font-size: 16px;
+        flex-direction: column;
+        justify-content: center;
+        padding: 15px;
+        text-align: center;
+    }
+
+    .cta p {
+        margin-left: 0;
+        margin-bottom: 10px;
+    }
+}
+
