--- a/Create Solution/styles.css
+++ b/Create Solution/styles.css
@@ -351,7 +351,7 @@ h2 {
 }
 
 .cta p{
-    margin-left: 5px;
+    font-size:20px;
     color: white ;
 }
 .cta{
@@ -372,13 +372,12 @@ h2 {
     background: transparent;
     color: rgb(248, 245, 244);
     border: 1px solid white;
-    padding: 10px 20px 10px;
     font-size: 16px;
     font-weight: bold;
+    height:40px;
+    width:100px;
     cursor: pointer;
     border-radius: 5px;
-    margin-top: 5px;
-    margin-left: 900px;
 }
 
 
